--- a/assignment7.html
+++ b/assignment7.html
@@ -1,75 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Centered SlideDown / SlideUp Toggle</title>
-<style>
-  /* Full screen flex container to center content */
-  body, html {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: #f3c2f1;
-    font-family: sans-serif;
-  }
+  <meta charset="UTF-8">
+  <title>Calculator with jQuery</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      margin-top: 50px;
+    }
 
-  #ad {
-    width: 300px;
-    background: #dcabfd;
-    color: rgb(0, 0, 0);
-    overflow: hidden;
-    height: 0;
-    opacity: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 18px;
-    text-align: center;
-    border-radius: 8px;
-    transition: height 0.5s ease, opacity 0.5s ease, padding-top 0.5s ease, padding-bottom 0.5s ease;
-  }
+    .calculator {
+      border: 2px solid #333;
+      padding: 20px;
+      border-radius: 10px;
+      background-color: #f9f9f9;
+      width: 250px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
 
-  #ad.show {
-    height: 100px; /* fixed height */
-    opacity: 1;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
+    .calculator input {
+      width: 100%;
+      height: 40px;
+      font-size: 20px;
+      margin-bottom: 15px;
+      padding: 5px;
+      box-sizing: border-box;
+    }
 
-  button {
-    margin-top: 20px;
-    padding: 10px 30px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 6px;
-    background: #f897f0;
-    color: rgb(0, 0, 0);
-    transition: background-color 0.3s ease;
-  }
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
 
-  button:hover {
-    background-color: #f3955f;
-  }
-</style>
+    .buttons button {
+      padding: 15px;
+      font-size: 18px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background-color: #eee;
+      transition: background-color 0.2s;
+    }
+
+    .buttons button:hover {
+      background-color: #ddd;
+    }
+
+    .highlight {
+      background-color: #ffc0cb !important;
+      color: #000;
+    }
+
+    .error {
+      border: 2px solid red;
+    }
+  </style>
 </head>
 <body>
 
-<div id="ad">Here is your slideDown/slideUp AD!</div>
-<button id="toggleBtn">Toggle Ad</button>
+  <div class="calculator">
+    <input type="text" id="display" readonly>
 
-<script>
-  const ad = document.getElementById('ad');
-  const btn = document.getElementById('toggleBtn');
+    <div class="buttons">
+      <button class="btn">7</button>
+      <button class="btn">8</button>
+      <button class="btn">9</button>
+      <button class="btn operator">/</button>
 
-  btn.onclick = () => {
-    ad.classList.toggle('show');
-  };
-</script>
+      <button class="btn">4</button>
+      <button class="btn">5</button>
+      <button class="btn">6</button>
+      <button class="btn operator">*</button>
+
+      <button class="btn">1</button>
+      <button class="btn">2</button>
+      <button class="btn">3</button>
+      <button class="btn operator">-</button>
+
+      <button class="btn">0</button>
+      <button class="btn">.</button>
+      <button id="clear">C</button>
+      <button class="btn operator">+</button>
+
+      <button id="equals" style="grid-column: span 4;">=</button>
+    </div>
+  </div>
+
+  <script>
+    $(document).ready(function() {
+      let input = "";
+
+      $(".btn").click(function() {
+        const value = $(this).text();
+        input += value;
+        $("#display").val(input);
+      });
+
+      $("#clear").click(function() {
+        input = "";
+        $("#display").val("");
+        $("#display").removeClass("error");
+      });
+
+      $("#equals").click(function() {
+        $(this).toggleClass("highlight"); // Toggle effect
+
+        try {
+          const result = eval(input); // Use with caution in real apps
+          $("#display").val(result);
+          input = result.toString();
+          $("#display").removeClass("error");
+        } catch (e) {
+          $("#display").val("Error");
+          $("#display").addClass("error");
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
